more staging changes

--- a/config/s3.yml
+++ b/config/s3.yml
@@ -9,6 +9,11 @@ test:
   secret_access_key: vcvTcg2D5lZeIPFMBEMJvbWME0qP0u5sogni2DjA
 
 production:
+  bucket: carriemail-staging
+  access_key_id: AKIAJH6PB433TWJOE4ZA
+  secret_access_key: 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
+    
+production:
   bucket: carriemail-production
   access_key_id: AKIAJH6PB433TWJOE4ZA
   secret_access_key: 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
